// ============================================================
// SISTEMA DE GESTÃO DE INVENTÁRIO HOSPITALAR
// Modelo da Base de Dados - DBML v3
// LEBIOM | SIBDAS 2025-2026
// ============================================================


// ============================================================
// TABELAS DE LOOKUP
// ============================================================

Table estados_equipamento {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  ordem      int     [not null, default: 0]

  Note: 'Valores: Ativo, Em manutenção, Em calibração, Inativo, Em quarentena, Abatido'
}

Table criticidades {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  ordem      int     [not null, default: 0]

  Note: 'Valores: Baixa, Média, Alta, Suporte de vida'
}

Table categorias {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  ordem      int     [not null, default: 0]

  Note: 'Valores: Monitorização, Suporte de vida, Terapia, Diagnóstico, Laboratório, Esterilização, Reabilitação'
}

Table tipos_fornecedor {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  ordem      int     [not null, default: 0]
  
  Note: 'Valores: Fabricante, Distribuidor ou Fornecedor comercial, Empresa de assistência técnica, Fornecedor de consumíveis ou acessórios'
}

Table tipos_entrada {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  ordem      int     [not null, default: 0]

   Note: 'Valores: Compra, Doação, Aluguer, Empréstimo'
}

Table separadores_documentacao {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  ordem      int     [not null, default: 0]

  Note: 'Grupos de documentação: Identificação, Aquisição, Garantia, Contrato'
}

Table tipos_documento_equipamento {
  id           int     [pk, increment]
  separador_id int     [ref: > separadores_documentacao.id]
  designacao   varchar [not null, unique]
  ordem        int     [not null, default: 0]

  Note: 'Cada tipo pertence a um separador. Ex: Manual de Serviço → Identificação; Fatura → Aquisição'
}

Table tipos_documento_fornecedor {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  ordem      int     [not null, default: 0]

  Note: 'Valores: Certificado ISO, Licença de distribuição, Certificado de acreditação técnica, Declaração de autorização de representação, Contrato geral de prestação de serviços, Alvará ou licença de atividade'
}

Table perfis_utilizador {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  ordem      int     [not null, default: 0]

  Note: 'Valores: Administrador, Profissional de Saúde'
}

Table tipos_contrato {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  ordem      int     [not null, default: 0]

  Note: 'Valores: Manutenção preventiva, Manutenção corretiva, Manutenção preventiva e corretiva'
}

Table periodicidades {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  ordem      int     [not null, default: 0]

  Note: 'Valores: Mensal, Trimestral, Semestral, Anual, Não aplicável'
}

Table unidades {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  ordem      int     [not null, default: 0]

  Note: 'Valores: unid, cx, pack, par, rolo, frasco, saco, kit, L, mL, m, cm'
}

Table estados_acessorio {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  valor      varchar [not null, unique]
  // valor interno usado no código (ex: 'em-uso')
  ordem      int     [not null, default: 0]

  Note: 'Valores: Novo, Em uso, Danificado, Em falta, Abatido'
}

Table moradas {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  ordem      int     [not null, default: 0]

  Note: 'Distritos e regiões de Portugal. Ex: Lisboa, Porto, Aveiro, Região Autónoma da Madeira'
}

Table tipos_alteracao {
  id         int     [pk, increment]
  designacao varchar [not null, unique]
  ordem      int     [not null, default: 0]

  Note: 'Preenchido automaticamente pelo sistema. Valores: Criação, Edição, Eliminação'
}

// ============================================================
// TABELAS PRINCIPAIS
// ============================================================

Table utilizadores {
  id              int      [pk, increment]
  nome            varchar  [not null]
  email           varchar  [not null, unique]
  password_hash   varchar  [not null]
  perfil_id       int      [not null, ref: > perfis_utilizador.id]
  ativo           boolean  [default: true]
  token_reset     varchar
  token_expira    datetime
  token_remember  varchar
  created_at      datetime [default: `CURRENT_TIMESTAMP`]
  updated_at      datetime [default: `CURRENT_TIMESTAMP`]
}

Table localizacoes {
  id          int      [pk, increment]
  codigo      varchar  [not null, unique]
  edificio    varchar  [not null]
  piso        varchar  [not null]
  servico     varchar  [not null]
  sala        varchar  [not null]
  observacoes text
  ativo       boolean  [default: true]
  created_at  datetime [default: `CURRENT_TIMESTAMP`]
  updated_at  datetime [default: `CURRENT_TIMESTAMP`]
}

Table fornecedores {
  id                       int      [pk, increment]
  codigo                   varchar  [not null, unique]
  nome_empresa             varchar  [not null]
  nif                      varchar  [not null, unique]
  telefone                 varchar  [not null, unique]
  email                    varchar  [not null, unique]
  morada_id                int      [not null, ref: > moradas.id]
  website                  varchar 
  pessoa_contacto          varchar  [not null]
  telefone_pessoa_contacto varchar  [not null]
  tipo_id                  int      [not null, ref: > tipos_fornecedor.id]
  observacoes              text
  ativo                    boolean  [default: true]
  created_at               datetime [default: `CURRENT_TIMESTAMP`]
  updated_at               datetime [default: `CURRENT_TIMESTAMP`]
}

Table documentacao_fornecedores {
  id                     int     [pk, increment]
  fornecedor_id          int     [not null, ref: > fornecedores.id]
  tipo_documento_id      int     [not null, ref: > tipos_documento_fornecedor.id]
  nome_documento         varchar [not null]
  data_documento         date    [not null]
  validade_documento     date
  ficheiro_documento     varchar 
  nome_original_ficheiro varchar
}

Table equipamentos {
  id                      int      [pk, increment]
  codigo                  varchar  [not null, unique]
  designacao              varchar  [not null]
  categoria_id            int      [not null, ref: > categorias.id]
  marca                   varchar  [not null]
  modelo                  varchar  [not null]
  numero_serie            varchar  [not null]
  fabricante              varchar  [not null]
  ano_fabrico             int
  estado_id               int      [not null, ref: > estados_equipamento.id]
  criticidade_id          int      [not null, ref: > criticidades.id]
  observacoes             text 
  localizacao_id          int      [not null, ref: > localizacoes.id]
  observacoes_localizacao text
  ativo                   boolean  [default: true]
  created_at              datetime [default: `CURRENT_TIMESTAMP`]
  updated_at              datetime [default: `CURRENT_TIMESTAMP`]

  indexes {
    (numero_serie, fabricante, modelo) [unique]
  }

  Note: 'O índice único (numero_serie, fabricante, modelo) garante que o mesmo número de série não é duplicado para o mesmo fabricante e modelo'
}

Table documentacao_equipamentos {
  id                     int     [pk, increment]
  equipamento_id         int     [not null, ref: > equipamentos.id]
  tipo_documento_id      int     [not null, ref: > tipos_documento_equipamento.id]
  nome_documento         varchar [not null]
  data_documento         date    [not null]
  validade_documento     date    [not null]
  ficheiro_documento     varchar
  nome_original_ficheiro varchar
  
   Note: 'separador_id removido: redundante — tipos_documento_equipamento já tem separador_id, o que tornaria separador_id aqui uma dependência transitiva (viola 3NF)'
}

Table acessorios {
  id             int     [pk, increment]
  equipamento_id int     [not null, ref: > equipamentos.id]
  nome           varchar [not null]
  referencia     varchar [not null]
  quantidade     int     [not null, default: 1]
  unidade_id     int     [not null, ref: > unidades.id]
  estado_id      int     [not null, ref: > estados_acessorio.id]
  observacoes    text
}

Table consumiveis {
  id             int     [pk, increment]
  equipamento_id int     [not null, ref: > equipamentos.id]
  nome           varchar [not null]
  referencia     varchar [not null]
  quantidade     int     [not null, default: 1]
  unidade_id     int     [not null, ref: > unidades.id]
  estado_id      int     [ref: > estados_acessorio.id]
  observacoes    text
}

Table aquisicao_equipamentos {
  id              int           [pk, increment]
  equipamento_id  int           [not null, ref: > equipamentos.id, unique]
  data_aquisicao  date          [not null]
  custo_aquisicao decimal(10,2) [not null]
  tipo_entrada_id int           [not null, ref: > tipos_entrada.id]
  observacoes     text
  created_at      datetime      [default: `CURRENT_TIMESTAMP`]
  updated_at      datetime      [default: `CURRENT_TIMESTAMP`]

  Note: 'Relação 1-para-1 com equipamentos (UNIQUE em equipamento_id). Moeda removida: EUR implícito no contexto PT'
}

Table equipamento_fornecedor {
  equipamento_id           int     [not null, ref: > equipamentos.id]
  fornecedor_id            int     [not null, ref: > fornecedores.id]
  morada_id                int     [not null, ref: > moradas.id]
  pessoa_contacto          varchar [not null]
  telefone_pessoa_contacto varchar [not null]
  observacoes              text

  indexes {
    (equipamento_id, fornecedor_id) [pk]
  }

  Note: 'Tabela de associação N:N entre equipamentos e fornecedores. morada_id, pessoa_contacto e telefone_pessoa_contacto são atributos da relação — podem variar consoante o equipamento. tipo_id não consta aqui porque o tipo é uma característica da empresa fornecedora, não da relação com o equipamento'
}

Table garantias_equipamentos {
  id             int     [pk, increment]
  equipamento_id int     [not null, ref: > equipamentos.id, unique]
  data_inicio    date    [not null]
  data_fim       date    [not null]
  observacoes    text

  Note: 'Relação 1-para-1 com equipamentos. Ausência de garantia representada por data_inicio e data_fim a NULL'
}

Table contratos_manutencao {
  id                   int     [pk, increment]
  equipamento_id       int     [not null, ref: > equipamentos.id, unique]
  tipo_contrato_id     int     [not null, ref: > tipos_contrato.id]
  entidade_responsavel varchar [not null]
  periodicidade_id     int     [not null, ref: > periodicidades.id]
  observacoes          text

  Note: 'Relação 1-para-1 com equipamentos. Ausência de contrato representada por tipo_contrato_id a NULL'
}

Table historico_equipamentos {
  id                int      [pk, increment]
  equipamento_id    int      [not null, ref: > equipamentos.id]
  utilizador_id     int      [ref: > utilizadores.id]
  tipo_alteracao_id int      [not null, ref: > tipos_alteracao.id]
  descricao         text
  dados_anteriores  json
  dados_novos       json
  data_alteracao    datetime [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'Registo automático de auditoria. tipo_alteracao_id substitui tipo_alteracao varchar — valor controlado por lookup evita inconsistências (3NF). dados_anteriores e dados_novos em JSON permitem registar qualquer alteração sem alterar o schema'
}

Table conteudos_publicos {
  id             int      [pk, increment]
  nome_campo     varchar  [not null, unique]
  conteudo_campo text     [not null]
  updated_at     datetime [default: `CURRENT_TIMESTAMP`]

  Note: 'Armazena os textos editáveis da área pública (home, sobre, funcionalidades, contactos, rodapé). nome_campo identifica univocamente cada campo editável'
}

Table mensagens_contacto {
  id         int      [pk, increment]
  nome       varchar  [not null]
  email      varchar  [not null]
  mensagem   text     [not null]
  data_envio datetime [default: `CURRENT_TIMESTAMP`]
  lido       boolean  [default: false]
  lido_em    datetime
  lido_por   int      [ref: > utilizadores.id]
}
